# dotfiles

./: .bash_aliases  .bashpromptrc  .conkyrc  .gitignore  .tmux.conf  Keybinds.conf  README.md  setup.sh
.config/: starship.toml
.config/autorandr/dual-monitor/: setup
.config/i3/: desktop.config  spotify.sh
.config/nvim/lua/: vim-options.lua
acpi/events/: acpi_handler.sh  cdnext  cdplay  cdprev  volumedown  volumeup
arch-zfs-install/: README.md  install-arch-zfs.sh
catppuccin_custom/: priv_ip.sh  pub_ip.sh
dunst/.config/dunst/: dunstrc
framework-led-daemon/: .gitignore  Cargo.toml  README.md  config.example.toml
framework-led-daemon/scripts/: install.sh  uninstall.sh
framework-led-daemon/src/: app.rs  audio.rs  config.rs  device.rs  doctor.rs  font.rs  frame.rs  main.rs  notify.rs  render.rs  sys.rs  tmux.rs
framework-led-daemon/systemd/: framework-led-daemon.service
hypr/.config/hypr/: hypridle.conf  hyprland.conf  hyprland.lua  hyprlock.conf  hyprpaper.conf
i3/: config  i3blocks.conf
i3-laptop/.config/i3/: battery.sh  config  get-cpu-usage.sh  i3blocks.conf  spotify.sh
i3-personal-desktop/.config/i3/: config
i3-work-desktop/.config/i3/: get-volume.sh  laptop.config
i3/.config/i3/: config  memory-percent.sh
kitty/.config/kitty/: kitty.conf
nvim/: README.md  init.lua  lazy-lock.json
nvim/.config/nvim/: LEARNING.md  init.lua  lazy-lock.json
nvim/lua/: vim-options.lua
sddm/: README.md
shell/: .bash_aliases  .profile
starship/.config/: starship.toml
tmux/: .tmux.conf  README.md
work-laptop/: README.md
(+108 files in other folders)
