[package]
name = "framework-led-daemon"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5"
dirs = "6.0"
serialport = "4.7"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.23"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
